# MemoryBear

./: .gitignore  CONTRIBUTING.md  README.md  README_CN.md
api/: docker-compose.yml  env.example  pyproject.toml
api/app/: celery_app.py  celery_task_scheduler.py  celery_worker.py  db.py  dependencies.py  main.py  tasks.py  version_info.json
api/app/config/: default_free_plan.py
api/app/controllers/: __init__.py  api_key_controller.py  app_controller.py  app_log_controller.py  auth_controller.py  chunk_controller.py  document_controller.py  file_controller.py  knowledge_controller.py  memory_agent_controller.py  memory_dashboard_controller.py  memory_explicit_controller.py  memory_storage_controller.py  model_controller.py  ontology_controller.py  prompt_optimizer_controller.py  public_share_controller.py  skill_controller.py  tenant_subscription_controller.py  tool_controller.py  user_controller.py  user_memory_controllers.py  workspace_controller.py
api/app/controllers/service/: __init__.py  app_api_controller.py  end_user_api_controller.py  memory_api_controller.py  memory_config_api_controller.py  rag_api_chunk_controller.py  user_memory_api_controller.py
api/app/core/: api_key_auth.py  api_key_utils.py  config.py  error_codes.py  language_utils.py  logging_config.py  quota_manager.py  quota_stub.py  sensitive_filter.py
api/app/core/agent/: langchain_agent.py
api/app/core/memory/: enums.py  memory_service.py
api/app/core/memory/analytics/: hot_memory_tags.py
api/app/core/memory/llm_tools/: chunker_client.py
api/app/core/memory/models/: __init__.py  graph_models.py  message_models.py  metadata_models.py  service_models.py  triplet_models.py  variate_config.py
api/app/core/memory/ontology_services/: General_purpose_entity.ttl  ontology_type_loader.py  ontology_type_merger.py
api/app/core/models/: base.py  compatible_chat.py  embedding.py  rerank.py
api/app/core/tools/: langchain_adapter.py
api/app/core/workflow/: executor.py  validator.py
api/app/i18n/: exceptions.py
api/app/locales/en/: errors.json
api/app/locales/zh/: errors.json
api/app/models/: end_user_model.py  file_model.py  memory_perceptual_model.py  tenant_model.py
api/app/plugins/: dashscope_patch.py
api/app/repositories/: app_repository.py  conversation_repository.py  end_user_info_repository.py  end_user_repository.py  implicit_emotions_storage_repository.py  knowledge_repository.py  memory_config_repository.py  model_repository.py  ontology_class_repository.py  tool_repository.py  user_repository.py
api/app/repositories/neo4j/: add_edges.py  add_nodes.py  create_indexes.py  cypher_queries.py  dialog_repository.py  entity_repository.py  graph_saver.py  graph_search.py  neo4j_connector.py  neo4j_update.py  statement_repository.py
api/app/schemas/: api_key_schema.py  app_log_schema.py  app_schema.py  chunk_schema.py  conversation_schema.py  end_user_schema.py  file_schema.py  memory_agent_schema.py  memory_api_schema.py  memory_config_schema.py  memory_storage_schema.py  order_schema.py  user_memory_schema.py  user_schema.py
api/app/services/: api_key_service.py  app_chat_service.py  app_dsl_service.py  app_log_service.py  app_service.py  auth_service.py  conversation_service.py  draft_run_service.py  emotion_analytics_service.py  file_storage_service.py  implicit_memory_service.py  knowledge_service.py  llm_router.py  master_agent_router.py  memory_agent_service.py  memory_api_service.py  memory_base_service.py  memory_config_service.py  memory_dashboard_service.py  memory_explicit_service.py  memory_perceptual_service.py  memory_storage_service.py  model_parameter_merger.py  model_service.py  multi_agent_orchestrator.py  multimodal_service.py  pilot_run_service.py  prompt_optimizer_service.py  shared_chat_service.py  tool_service.py  user_memory_service.py  user_service.py  workflow_import_service.py  workflow_service.py  workspace_service.py
api/app/services/prompt/: perceptual_summary_system.jinja2  prompt_optimizer_system.jinja2
api/app/utils/: dashscope_patch.py  tmp_session.py
api/migrations/versions/: 37e2a73b28c4_202604291755.py
(+314 files in other folders)
