[project]
name = "redbear-mem"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "alembic==1.17.0",
    "amqp==5.3.1",
    "annotated-types==0.7.0",
    "anyio==4.11.0",
    "async-timeout==5.0.1",
    "bcrypt==5.0.0",
    "billiard==4.2.2",
    "celery==5.5.3",
    "cffi==2.0.0",
    "click==8.3.0",
    "click-didyoumean==0.3.1",
    "click-plugins==1.1.1.2",
    "click-repl==0.3.0",
    "cryptography==46.0.3",
    "ecdsa==0.19.1",
    "email-validator>=2.3.0",
    "exceptiongroup==1.3.0",
    "fastapi==0.119.0",
    "greenlet==3.2.4",
    "h11==0.16.0",
    "httptools==0.7.1",
    "idna==3.11",
    "kombu==5.5.4",
    "mako==1.3.10",
    "markupsafe==3.0.3",
    "packaging==25.0",
    "passlib==1.7.4",
    "prompt-toolkit==3.0.52",
    "psycopg2-binary==2.9.11",
    "pyasn1==0.6.1",
    "pycparser==2.23",
    "pydantic==2.12.2",
    "pydantic-core==2.41.4",
    "python-dateutil==2.9.0.post0",
    "python-dotenv==1.1.1",
    "python-jose==3.5.0",
    "python-multipart>=0.0.20",
    "pyyaml==6.0.3",
    "redis==6.4.0",
    "rsa==4.9.1",
    "six==1.17.0",
    "sniffio==1.3.1",
    "sqlalchemy==2.0.44",
    "starlette==0.48.0",
    "tomli==2.3.0",
    "typing-extensions==4.15.0",
    "typing-inspection==0.4.2",
    "tzdata==2025.2",
    "uvicorn==0.37.0",
    "uvloop==0.22.1; sys_platform != 'win32'",
    "vine==5.1.0",
    "watchfiles==1.1.1",
    "wcwidth==0.2.14",
    "websockets==15.0.1",
    "requests==2.32.5",
    "elastic-transport==8.17.0",
    "elasticsearch==8.17.0",
    "elasticsearch-dsl==8.17.0",
    "xinference-client==1.11.0",
    "langchain-ollama",
    "chardet==5.2.0",
    "tiktoken==0.12.0",
    "markdown==3.8",
    "langchain>=1.0.3",
    "langchain-openai>=1.0.2",
    "langchain-community>=0.3.31",
    "dashscope>=1.25.0",
    "neo4j>=6.0.3",
    "chonkie>=1.1.2",
    "pandas>=2.3.3",
    "jinja2>=3.1.6",
    "mcp>=1.21.1",
    "concurrent-log-handler>=0.9.28",
    "langchain-mcp-adapters>=0.1.13",
    "pytest>=9.0.1",
    "matplotlib>=3.10.7",
    "langfuse>=3.10.0",
    "beartype==0.22.5",
    "pdfplumber==0.11.7",
    "olefile==0.47",
    "cachetools==6.2.1",
    "ruamel.yaml==0.18.10",
    "strenum==0.4.15",
    "opencv-python==4.10.0.84",
    "numpy>=1.26.0,<2.0.0",
    "huggingface-hub==0.25.2",
    "torch==2.2.2",
    "onnxruntime==1.20.1",
    "shapely==2.1.2",
    "pyclipper==1.3.0.post6",
    "trio==0.32.0",
    "pillow==12.0.0",
    "roman-numbers==1.0.2",
    "word2number==1.1",
    "cn2an==0.5.23",
    "scikit-learn==1.7.2",
    "datrie==0.8.3",
    "hanziconv==0.3.2",
    "nltk==3.9.2",
    "python-pptx==1.0.2",
    "xgboost==3.0.0",
    "pypdf==6.1.3",
    "beautifulsoup4==4.14.2",
    "pandas==2.3.3",
    "openpyxl==3.1.5",
    "python-docx==1.2.0",
    "demjson3==3.0.6",
    "xpinyin==0.7.7",
    "json-repair==0.53.0",
    "jinja2==3.1.6",
    "xxhash==3.6.0",
    "tika==3.1.0",
    "PyPDF2==3.0.1",
    "mammoth==1.11.0",
    "markdownify==1.2.0",
    "flask==3.1.2",
    "html5lib==1.1",
    "jieba>=0.42.1",
    "fastmcp>=2.13.1",
    "pytest-asyncio>=1.3.0",
    "uvicorn>=0.34.0",
    "celery>=5.5.2",
    "simpleeval>=1.0.3",
    "langchain-aws>=1.0.0a1",
    "networkx>=3.4.2",
    "editdistance==0.8.1",
    "graspologic==3.4.5.dev2",
    "markdown-to-json==2.1.1",
    "valkey==6.0.2",
    "python-calamine>=0.4.0",
    "xlrd==2.0.2",
    "deprecated>=1.3.1",
    "oss2>=2.19.1",
    "flower>=2.0.1",
    "aiofiles>=23.0.0",
    "owlready2>=0.46",
    "rdflib>=7.0.0",
    "lxml>=4.9.0",
    "httpx>=0.28.0",
    "modelscope>=1.34.0",
    "python-magic>=0.4.14; sys_platform == 'linux' or sys_platform == 'darwin'",
    "python-magic-bin>=0.4.14; sys_platform=='win32'",
    "volcengine-python-sdk[ark]==5.0.19",
    "pymupdf>=1.27.2.2",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
# 使用 anyio 作为异步测试后端
anyio_backends = ["asyncio"]
